add debug config option

--- a/sample.codeclimate.yml
+++ b/sample.codeclimate.yml
@@ -8,3 +8,4 @@ engines:
       standards_dir: lib/ansiblereview/examples
       lint_dir: lib/ansiblereview/examples/lint-rules
       search_method: git
+      debug: true
